--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.11.1",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
