--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,15 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
