--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -17,6 +18,7 @@
     "nodemon": "^2.0.20",
     "passport": "^0.7.0",
     "passport-google-oidc": "^0.1.0",
+    "passport-local": "^1.0.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
