--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "passport": "^0.7.0",
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
+    "passport-spotify": "^2.0.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
