--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,6 @@
 {
   "server_host": "localhost",
-  "server_port": "8080"
+  "server_port": "8080",
+  "backend_url": "http://localhost:8080",
+  "backend_url_server": "http://backend.cis5500.local:8080"
 }
